--- a/css/style.css
+++ b/css/style.css
@@ -2424,7 +2424,7 @@ z-index:2}
 .posts .hentry:not(.has-post-thumbnail) .entry-inner-content
 {bottom:auto;
 height:80%;
-padding-top:15%;
+padding-right:1.5em;
 position:relative;
 -ms-transform:translateY(0);
 -webkit-transform:translateY(0);
@@ -2797,7 +2797,8 @@ right:auto}
 {left:auto;
 margin-left:0;
 margin-right:-25px;
-right:0}
+right:0
+padding-right: 1.5em;}
 
 .widget-area
 {max-width:calc(100% - 4em)}
