Update style background

--- a/css/style.css
+++ b/css/style.css
@@ -1918,7 +1918,7 @@ hr {
   }
 }
 .header-10-sub .background {
-    background-image: url(https://lh3.googleusercontent.com/BOJdBoW1FaBjRu7Bsk8rv9bT_rWFvZzAfoPWTZyZs…KGXygufEbMtNB8fHPiEKcMXZnEd9VlNdbUpa9u7T9aMu_ITEWC2NLIQzMm1OpZcFFw=s581-no);
+    background-image: url(https://lh3.googleusercontent.com/_rcCQp-pnaCOAoxw03PDtilEAvWukS7rV716S75V9XRyjJPA-u7lmegPT6WYFlhhK36wvsaqRan2kTetoiggeRwSsmRwTX0BD16mEbKnDvjcBp1pTFuvAZ7veS9AYIVzYM9YyOr7cTKUBldM1jXhHR0h4iW4uUjpnWTrQBOYvkTAlfTOKkyxBfLe54ThTWnMeAfvA6UkK_7JgxMQyVzYBMjzIMbaJGw8bEeMJ0c5Y3nKQxsE1pNLD0oNaFY7Z2SKHF-7K4eRVaq6co0u_RMSUiSOIioz88oIcdZBe-oMt935WbBv4129Rfqewzd3OaAQXjhYXj52tLrKkJybdc3ovoKCIMj3bjQMjfur_XXyFhowVXWs6STIXRxOel7wD1J8Bhx5O6ciV7mfx6bN5DbnSClRs0PH9IkgZkjQwY5iVpUQc4zNqWs2_Ixb9GbEpsi6rvEqS_UYS2xR1PH0xLuTr07fNLrQfOJRrhCv49iS9nVlD_In_09GgK0IWiPpheiLULjZZKgNFTzq82jelfIaTcS7FqH9LwhPgS7_HEeE6GV6ZmnxidttPylIjqP_Ad3ugreh_9PUz3XFpM-yRq-VVCdXsN2x_w=s581-no);
     background-size: contain;
     height: 81vh;
     opacity: 4;
