--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,7 @@ footer {
   background-color: #34495e;
 }
 .bg-midnight-blue {
-  background-color: #117668;
+  background-color: #7A0000;
 }
 .bg-sun-flower {
   background-color: #f1c40f;
