Update bg image

--- a/css/style.css
+++ b/css/style.css
@@ -1963,7 +1963,7 @@ hr {
 }
 
 .content-23.custom-bg {
-  background-image: url("https://photo-cdn.icons8.com/assets/previews/343/6b41fbee-16ed-49e2-8fd8-2edf35e51dbf1x.jpg");
+  background-image: url("https://lh3.googleusercontent.com/pw/AM-JKLUgUAmL2ZF2C7lzGwLLrCK7UhjR9JVmDeN2sAWtJOcVC0-GKLpXJQ_VlQSa-4I86_ywaonO2jvHSr-Eg0vdnAs5f5jCWLKqYMebbpcj3-CBe5u-un3Tjf0SnTHJqajloak4uQZ0ZJvxtoBx2AKzwXhH=w1317-h879-no?authuser=0");
   background-size:     cover;
   height: 120vh;
   opacity: 10;
@@ -1971,7 +1971,7 @@ hr {
 }
 
 .content-23.custom-bg-2 {
-  background-image: url("https://photo-cdn.icons8.com/assets/previews/290/0261e648-b608-4c84-ad8c-0f49dedfd5dd1x.jpg");
+  background-image: url("https://lh3.googleusercontent.com/4Rurmh-0L2JjU41ZEDqVgXfQuz55lJEBPX71I_jLGp4X1dc2N-qgpvCdbo8wRSNZ2wekpV9w4gEo3XU3eCnvgW-K5HiBFFet9YCWLrmM1DvvtbcjZI-uS12b8pI0aXtfohk3dNFFTXxTNUvFEUGkXAk9eyaw48UWBirtU5PqtBunEptq98wEt512DizzzVOmiRFS1zknmYJoIHgKq7nwNRhzK-YVFNmqMTrm30YLzMrwq197iVqOSkRkuR2kscDhnf8R380y8l3FD6x9kd13Bp_jGtHPlzchuYFJXKjiE-UrpKiNYbtMwtNIh12CBq8s3MfzTDCSF_R8bNWxanVaybQfqp4ragVeM2ZZTbYwNmT96xNtETvKqiaeIZEvbHKeXZMAFpD9kz6DlnNrwg6KfyA05e7oLcruV-IuuxwDy277j35EYeU6O3FgnPvG5GBQl582dvfeAIa3SUohYnL9XoQZsQMgzNelMk-JfdzgHKlgFjA4BGhgG-z8xpwqygXSECpWLO5qzUx2hlguaPJUBdiPL8TZAvTxB_3puCh1JoPmLsVV7MxhUt6G-mqLwpya8QYVE1WzCnpKtV1zxySi5kDGfLrWYdz-Nuvzzku7Z496TVlMkoDUt38Lv_rtGQe6PhYUbfAF1tpvGENN--4IAjJ87HHM-M7eJV8WbNfPcrtoiAYgWR2ff0VgyAR7rQuLj0gti36b6zDatOdsgJxusneZ=w1317-h879-no?authuser=1");
   background-size:     cover;
   height: 120vh;
   opacity: 10;
